--- a/pagina de cafe/Index.html
+++ b/pagina de cafe/Index.html
@@ -6,6 +6,8 @@
     <title>Punto de Fusión - Cafetería</title>
     <link rel="stylesheet" href="style.css" />
 </head>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <body>
 
     <header>
